moved prior issues to GitHub, streamlined README